--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,7 +18,10 @@ jobs:
         uses: actions/setup-node@2fddd8803e2f5c9604345a0b591c3020ee971a93 # tag=v3.4.1
         with:
           node-version: 16
+          registry-url: https://npm.pkg.github.com
           cache: npm
+
+      - run: npm ci
 
       - name: Release
         run: npm publish
