--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@tksst/lib-demo-esm",
+  "name": "@tksst-gh/lib-demo-esm",
   "version": "0.0.5",
   "license": "Apache-2.0",
-  "repository": "github:tksst/javascript-lib-demo-esm.git",
+  "repository": "github:tksst-gh/javascript-lib-demo-esm.git",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com",
     "access": "public"
