--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tksst-gh/lib-demo-esm",
-  "version": "0.0.6",
+  "version": "0.0.8",
   "license": "Apache-2.0",
   "repository": "github:tksst-gh/javascript-lib-demo-esm.git",
   "publishConfig": {
@@ -9,9 +9,17 @@
   },
   "type": "module",
   "exports": {
-    "import": "./index.js"
+    "import": "./dist/index.js"
   },
+  "types": "./dist/index.d.ts",
   "dependencies": {
     "@tksst/eslint-config": "2.3.1"
+  },
+  "devDependencies": {
+    "typescript": "4.7.4"
+  },
+  "scripts": {
+    "prepack": "npm run build",
+    "build": "tsc"
   }
 }
